# rusty-rudolf

./: Cargo.toml
benches/: my-benchmark.rs
src/: kalman.rs  lib.rs
src/filter/: extended_kalman.rs  filter_traits.rs  kalman.rs  kalman_common.rs  mod.rs  traits.rs
src/filter/kalman/: linear.rs  mod.rs
src/filter/kalman/nonlinear/: extended.rs  mod.rs
src/types/: aliases.rs  matrix.rs  mod.rs  ops.rs  ops_traits.rs
