[package]
name = "rusty_rudolf"
version = "0.1.0"
authors = ["Vanio Begic <vanio.begic123@gmail.com>"]
description = "Algorithms for filtering problem"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["blas"] }
ndarray-linalg = { version = "0.12", features = ["openblas"] }
lapack-src = { version = "0.6", features = ["openblas"] }
cauchy = "0.2.2"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path="./benches/my-benchmark.rs"