[package]
name = "rusty_rudolf"
version = "0.1.0"
authors = ["Vanio Begic <vanio.begic123@gmail.com>"]
description = "Algorithms for filtering problem"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["blas"] }
ndarray-linalg = { version = "0.12", features = ["openblas"] }
blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9", default-features = false, features = ["cblas", "static"] }
cauchy = "0.2.2"
nalgebra = "0.24.1"
#mimalloc = { version = "0.1.17", default-features = false }
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path="./benches/my-benchmark.rs"

[profile.release]
debug = true